<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMI Calculator App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="height">My Height:</string>
    <string name="zero">0</string>
    <string name="metre">metres</string>
    <string name="inch">inches</string>
    <string name="weight">My Weight</string>
    <string name="kilogram">kilograms</string>
    <string name="pound">pounds</string>
    <string name="calculate">Calculate BMI</string>
    <string name="result">Results:</string>
    <string name="reset">Reset</string>
    <string name="unit">Unit</string>
    <string name="unitSwitchStatusTextView">Switch Status</string>
    <string name="unitSwitchHint">Turn the switch on to convert measurements to Metric</string>

</resources>
